--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -10,12 +10,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World!\n"
+      "Square of 0 = 0\n",
+      "Cube of 0 = 0\n",
+      "Cube of 1 = 1\n",
+      "Square of 1 = 1\n",
+      "Cube of 2 = 8\n",
+      "Square of 2 = 4\n",
+      "Cube of 3 = 27\n",
+      "Square of 3 = 9\n",
+      "Cube of 4 = 64\n",
+      "Square of 4 = 16\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello, World!\")"
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "def calculate_square():\n",
+    "    for i in range(5):\n",
+    "        print(f\"Square of {i} = {i*i}\")\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "def calculate_cube():\n",
+    "    for i in range(5):\n",
+    "        print(f\"Cube of {i} = {i*i*i}\")\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "t1 = threading.Thread(target=calculate_square)\n",
+    "t2 = threading.Thread(target=calculate_cube)\n",
+    "\n",
+    "t1.start()\n",
+    "t2.start()\n",
+    "\n",
+    "t1.join()\n",
+    "t2.join()"
    ]
   }
  ],
